Print Preview: Fix failure to save with long page title

BUG=707538

Review-Url: https://codereview.chromium.org/2804793002
Cr-Commit-Position: refs/heads/master@{#466053}

Former-commit-id: e5be563564bd38f1f8355406a658ff93bc71027a